# ChangeLog for net-im/naim
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/naim/Attic/ChangeLog,v 1.14 2003/01/20 06:59:38 raker Exp $

*naim-0.11.5.3-r1 (20 Jan 2003)

  19 Jan 2003; Nick Hadaway <raker@gentoo.org> naim-0.11.5.3-r1.ebuild,
  files/digest-naim-0.11.5.3-r1 :
  install pertinent files into /usr/share/doc/naim as noted by "The
  guy who wrote NAIM" so help functions work.

*naim-0.11.5.3 (15 Jan 2003)

  15 Jan 2002; Brandon Low <lostlogic@gentoo.org> naim-0.11.5.3.ebuild :
  Fixes a bug in the automatic encryption.

*naim-0.11.5.2 (14 Jan 2003)

  14 Jan 2002; Brandon Low <lostlogic@gentoo.org> naim-0.11.5.2.ebuild :
  Minor update to 0.11.5.2

*naim-0.11.5.1 (21 Dec 2002)

  21 Dec 2002; Brandon Low <lostlogic@gentoo.org> naim-0.11.5.1.ebuild :
  Minor update to 0.11.5.1

*naim-0.11.5 (10 Dec 2002)

  10 Dec 2002; Brandon Low <lostlogic@gentoo.org> naim-0.11.5.ebuild :
  Final realease, check the site changelog for more info.  The
  autocomplete is really neat, check it out.  I've been running this
  series for a few weeks, I see no reason to leave it unstable for long.

*naim-0.11.5_rc3 (10 Dec 2002)

  10 Dec 2002; Brandon Low <lostlogic@gentoo.org> naim-0.11.5_rc3.ebuild :
  Looks like this should be the last _rc release before final.  Has some
  new features this time like better window resize.  Check his
  changelogs for more info.

*naim-0.11.5_rc1 (08 Dec 2002)

  08 Dec 2002; Brandon Low <lostlogic@gentoo.org> naim-0.11.5_rc1.ebuild :
  Dan is getting ready for release, and we will be right with him :)

*naim-0.11.5_pre1 (04 Dec 2002)

  04 Dec 2002; Brandon Low <lostlogic@gentoo.org> naim-0.11.5_pre1.ebuild :

  Add an unstable prerelease version from the 0.11.5 series, because 0.11.4
  is breaking for me lately.  Enjoy, please let me know how it works.

*naim-0.11.4.13 (16 Nov 2002)

  16 Nov 2002; Brandon Low <lostlogic@gentoo.org> naim-0.11.4.13.ebuild :
