@@ -1,6 +1,6 @@
 # Copyright 1999-2002 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/naim/Attic/naim-0.11.5.1.ebuild,v 1.2 2003/01/05 02:42:50 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/naim/Attic/naim-0.11.5.1.ebuild,v 1.3 2003/02/11 04:17:41 latexer Exp $
 
 VA="`echo ${PV}|sed -e 's:^\([0-9]*\)\..*$:\1:'`"
 VB="`echo ${PV}|sed -e 's:^[0-9]*\.\([0-9]*\)\..*$:\1:'`"
@@ -14,7 +14,7 @@ P="${P/_/}"
 
 SLOT="0"
 LICENSE="GPL-2"
-KEYWORDS="x86 ppc"
+KEYWORDS="x86 ppc ~alpha"
 
 DEPEND=">=sys-libs/ncurses-5.2
 	virtual/glibc"
